# worldcup2026

./: .gitignore  README.md  index.html  pyproject.toml  requirements.txt
.github/workflows/: keep_alive.yml  update_data.yml
data/: tournament_state.json
data/processed/: df_teams.csv  features.csv
data/raw/: results.csv
frontend/: index.html
models/: xgboost.pkl
src/: api.py  data.py  features.py  main.py  precompute.py  simulate.py  train.py
