[project]
name = "worldcup2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.1",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "uvicorn>=0.49.0",
    "xgboost>=3.2.0",
]
